--- a/contato.html
+++ b/contato.html
@@ -71,7 +71,7 @@
         <h4>Fale conosco</h4>
         <ul>
             <li>Produtos Naturais Chapecó</li>
-            <li>produtosnaturaiscco@produtosnaturaiscco</li>
+            <li>produtosnaturaiscco@produtosnaturaiscco.com.br</li>
             <li>49 99156-2565</li>
             <li>Chapecó - SC</li>
         </ul>
